@@ -5,21 +5,12 @@ import static com.github.tomakehurst.wiremock.client.WireMock.matchingJsonPath;
 import static com.github.tomakehurst.wiremock.client.WireMock.okJson;
 import static com.github.tomakehurst.wiremock.client.WireMock.put;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlPathMatching;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.fail;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.folio.support.TestUtil.UPLOAD_DEFINITIONS_PATH;
 
-import com.github.tomakehurst.wiremock.client.WireMock;
-import io.restassured.RestAssured;
 import io.vertx.core.json.JsonObject;
-import io.vertx.ext.unit.TestContext;
-import io.vertx.ext.unit.junit.VertxUnitRunner;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import org.apache.http.HttpStatus;
 import org.folio.rest.jaxrs.model.AssembleFileDto;
@@ -27,212 +18,121 @@ import org.folio.rest.jaxrs.model.FileDefinition;
 import org.folio.rest.jaxrs.model.FileUploadInfo;
 import org.folio.rest.jaxrs.model.JobExecution;
 import org.folio.rest.jaxrs.model.UploadDefinition;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.folio.support.AbstractRestTest;
+import org.folio.support.TestUtil;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 
-@RunWith(VertxUnitRunner.class)
-public class AssembleFileTest extends AbstractRestTest {
+class AssembleFileTest extends AbstractRestTest {
 
-  private static final String DEFINITION_PATH =
-    "/data-import/uploadDefinitions";
+  private static final String JOB_EXEC_ID = "90e5a90e-4133-563c-ab33-969b39080c1c";
 
-  private static final String ASSEMBLE_PATH =
-    "/data-import/uploadDefinitions/{uploadDefinitionId}/files/{fileDefinitionId}/assembleStorageFile";
-
-  private static final String UPLOAD_URL_PATH = "/data-import/uploadUrl";
-  private static final String UPLOAD_URL_CONTINUE_PATH =
-    "/data-import/uploadUrl/subsequent";
-
-  private static final String JOB_EXEC_ID =
-    "90e5a90e-4133-563c-ab33-969b39080c1c";
-
+  @DisplayName("should assemble file from multiple uploaded parts")
   @Test
-  public void testAssemble(TestContext context) {
-    UploadDefinition definition = createUploadDefinition();
+  void shouldAssembleFile_whenAllPartsUploaded() {
+    final var definition = createUploadDefinition();
 
     FileUploadInfo firstPartUploadInfo = getFirstPart("test-name1");
     FileUploadInfo secondPartUploadInfo = getLaterPart(
-      firstPartUploadInfo.getKey(),
-      firstPartUploadInfo.getUploadId(),
-      2
-    );
+      firstPartUploadInfo.getKey(), firstPartUploadInfo.getUploadId(), 2);
     FileUploadInfo thirdPartUploadInfo = getLaterPart(
-      firstPartUploadInfo.getKey(),
-      firstPartUploadInfo.getUploadId(),
-      3
-    );
+      firstPartUploadInfo.getKey(), firstPartUploadInfo.getUploadId(), 3);
 
     List<String> tags = new ArrayList<>();
     tags.add(upload(firstPartUploadInfo.getUrl(), 5 * 1024 * 1024));
     tags.add(upload(secondPartUploadInfo.getUrl(), 5 * 1024 * 1024));
     tags.add(upload(thirdPartUploadInfo.getUrl(), 3 * 1024 * 1024));
 
-    AssembleFileDto dto = new AssembleFileDto()
-      .withKey(firstPartUploadInfo.getKey())
-      .withUploadId(firstPartUploadInfo.getUploadId())
-      .withTags(tags);
-
-    RestAssured
-      .given()
-      .spec(spec)
-      .body(dto)
+    given()
+      .body(new AssembleFileDto()
+        .withKey(firstPartUploadInfo.getKey())
+        .withUploadId(firstPartUploadInfo.getUploadId())
+        .withTags(tags))
       .pathParam("uploadDefinitionId", definition.getId())
-      .pathParam(
-        "fileDefinitionId",
-        definition.getFileDefinitions().getFirst().getId()
-      )
-      .when()
-      .post(ASSEMBLE_PATH)
+      .pathParam("fileDefinitionId", definition.getFileDefinitions().getFirst().getId())
+      .post(TestUtil.ASSEMBLE_PATH)
       .then()
       .statusCode(HttpStatus.SC_NO_CONTENT);
 
     UploadDefinition result = getUploadDefinition(definition.getId());
 
-    assertThat(
-      result.getFileDefinitions().getFirst().getSourcePath(),
-      is(firstPartUploadInfo.getKey())
-    );
-    assertThat(
-      result.getFileDefinitions().getFirst().getStatus(),
-      is(FileDefinition.Status.UPLOADED)
-    );
+    assertThat(result.getFileDefinitions().getFirst().getSourcePath())
+      .isEqualTo(firstPartUploadInfo.getKey());
+    assertThat(result.getFileDefinitions().getFirst().getStatus())
+      .isEqualTo(FileDefinition.Status.UPLOADED);
   }
 
+  @DisplayName("should return 500 when part upload tags are invalid")
   @Test
-  public void shouldFailAssembleFileFailedPartUpload(TestContext context) {
+  void shouldReturn500_whenPartUploadFailed() {
     UploadDefinition definition = createUploadDefinition();
 
     FileUploadInfo firstPartUploadInfo = getFirstPart("test-name1");
 
-    // no parts actually uploaded
-    AssembleFileDto dto = new AssembleFileDto()
-      .withKey(firstPartUploadInfo.getKey())
-      .withUploadId(firstPartUploadInfo.getUploadId())
-      .withTags(Arrays.asList("invalid"));
-
-    RestAssured
-      .given()
-      .spec(spec)
-      .body(dto)
+    given()
+      .body(new AssembleFileDto()
+        .withKey(firstPartUploadInfo.getKey())
+        .withUploadId(firstPartUploadInfo.getUploadId())
+        .withTags(List.of("invalid")))
       .pathParam("uploadDefinitionId", definition.getId())
-      .pathParam(
-        "fileDefinitionId",
-        definition.getFileDefinitions().getFirst().getId()
-      )
-      .when()
-      .post(ASSEMBLE_PATH)
+      .pathParam("fileDefinitionId", definition.getFileDefinitions().getFirst().getId())
+      .post(TestUtil.ASSEMBLE_PATH)
       .then()
       .statusCode(HttpStatus.SC_INTERNAL_SERVER_ERROR);
 
     UploadDefinition result = getUploadDefinition(definition.getId());
 
-    assertThat(
-      result.getFileDefinitions().getFirst().getSourcePath(),
-      is(nullValue())
-    );
-    assertThat(
-      result.getFileDefinitions().getFirst().getStatus(),
-      is(FileDefinition.Status.UPLOADING)
-    );
+    assertThat(result.getFileDefinitions().getFirst().getSourcePath()).isNull();
+    assertThat(result.getFileDefinitions().getFirst().getStatus())
+      .isEqualTo(FileDefinition.Status.UPLOADING);
   }
 
   private UploadDefinition createUploadDefinition() {
-    WireMock.stubFor(
-      put(
-        urlPathMatching(
-          "/change-manager/jobExecutions/" + JOB_EXEC_ID + "/status"
-        )
-      )
-        .withRequestBody(matchingJsonPath("$.status", equalTo("FILE_UPLOADED")))
-        .willReturn(okJson(JsonObject.mapFrom(new JobExecution()).toString()))
-    );
+    WIRE_MOCK.stubFor(put(urlPathMatching(
+      "/change-manager/jobExecutions/" + JOB_EXEC_ID + "/status"))
+      .withRequestBody(matchingJsonPath("$.status", equalTo("FILE_UPLOADED")))
+      .willReturn(okJson(JsonObject.mapFrom(new JobExecution()).toString())));
 
-    return RestAssured
-      .given()
-      .spec(spec)
-      .body(
-        new UploadDefinition()
-          .withFileDefinitions(
-            Arrays.asList(
-              new FileDefinition()
-                .withUiKey("ui-key")
-                .withName("name.mrc")
-                .withSize(10000)
-                .withJobExecutionId(JOB_EXEC_ID)
-            )
-          )
-      )
-      .when()
-      .post(DEFINITION_PATH)
+    return given()
+      .body(new UploadDefinition()
+        .withFileDefinitions(Collections.singletonList(new FileDefinition()
+          .withUiKey("ui-key")
+          .withName("name.mrc")
+          .withSize(10000)
+          .withJobExecutionId(JOB_EXEC_ID))))
+      .post(UPLOAD_DEFINITIONS_PATH)
       .then()
       .statusCode(HttpStatus.SC_CREATED)
-      .extract()
-      .body()
-      .as(UploadDefinition.class);
+      .extract().body().as(UploadDefinition.class);
   }
 
   private UploadDefinition getUploadDefinition(String id) {
-    return JsonObject
-      .mapFrom(
-        RestAssured
-          .given()
-          .spec(spec)
-          .when()
-          .get(DEFINITION_PATH + "/" + id)
-          .then()
-          .statusCode(HttpStatus.SC_OK)
-          .extract()
-          .as(UploadDefinition.class)
-      )
-      .mapTo(UploadDefinition.class);
+    return JsonObject.mapFrom(
+      given()
+        .get(UPLOAD_DEFINITIONS_PATH + "/" + id)
+        .then()
+        .statusCode(HttpStatus.SC_OK)
+        .extract().as(UploadDefinition.class)
+    ).mapTo(UploadDefinition.class);
   }
 
   private FileUploadInfo getFirstPart(String filename) {
-    return RestAssured
-      .given()
-      .spec(spec)
-      .when()
+    return given()
       .queryParam("fileName", filename)
-      .get(UPLOAD_URL_PATH)
+      .get(TestUtil.UPLOAD_URL_PATH)
       .then()
       .statusCode(HttpStatus.SC_OK)
-      .extract()
-      .body()
-      .as(FileUploadInfo.class);
+      .extract().body().as(FileUploadInfo.class);
   }
 
-  private FileUploadInfo getLaterPart(
-    String key,
-    String uploadId,
-    int partNumber
-  ) {
-    return RestAssured
-      .given()
-      .spec(spec)
-      .when()
+  private FileUploadInfo getLaterPart(String key, String uploadId, int partNumber) {
+    return given()
       .queryParam("key", key)
       .queryParam("uploadId", uploadId)
       .queryParam("partNumber", Integer.toString(partNumber))
-      .get(UPLOAD_URL_CONTINUE_PATH)
+      .get(TestUtil.UPLOAD_URL_CONTINUE_PATH)
       .then()
       .statusCode(HttpStatus.SC_OK)
-      .extract()
-      .body()
-      .as(FileUploadInfo.class);
-  }
-
-  private String upload(String url, int size) {
-    // unsure how to make this work with restassured...
-    try {
-      HttpURLConnection con = (HttpURLConnection) new URL(url).openConnection();
-      con.setRequestMethod("PUT");
-      con.setDoOutput(true);
-      OutputStream output = con.getOutputStream();
-      output.write(new byte[size]);
-      return (con.getHeaderField("eTag"));
-    } catch (Exception e) {
-      fail(e.getMessage());
-      throw new IllegalStateException();
-    }
+      .extract().body().as(FileUploadInfo.class);
   }
 }
