@@ -1,10 +1,7 @@
 package org.folio.service.file;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.empty;
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.is;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.folio.support.TestUtil.TENANT_ID;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.times;
@@ -16,230 +13,138 @@ import static org.mockito.Mockito.when;
 import com.github.tomakehurst.wiremock.client.WireMock;
 import io.vertx.core.Future;
 import io.vertx.core.json.JsonObject;
-import io.vertx.ext.unit.TestContext;
-import io.vertx.ext.unit.junit.VertxUnitRunner;
+import io.vertx.junit5.VertxTestContext;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import org.folio.dataimport.util.ConnectionParams;
 import org.folio.okapi.common.XOkapiHeaders;
 import org.folio.rest.jaxrs.model.InitJobExecutionsRsDto;
 import org.folio.rest.jaxrs.model.JobExecution;
 import org.folio.rest.jaxrs.model.JobProfileInfo;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 
-@RunWith(VertxUnitRunner.class)
-public class SplitFileProcessingServiceRegistrationTest
-  extends SplitFileProcessingServiceAbstractTest {
+class SplitFileProcessingServiceRegistrationTest extends SplitFileProcessingServiceAbstractTest {
 
+  @DisplayName("should return empty list when no keys to register")
   @Test
-  public void testNoSplitRegistration(TestContext context) {
-    service
-      .registerSplitFileParts(
-        null,
-        null,
-        new JobProfileInfo().withDataType(JobProfileInfo.DataType.MARC),
-        changeManagerClient,
-        0,
-        new ConnectionParams(
-          Map.of(XOkapiHeaders.TENANT, TENANT_ID),
-          null
-        ),
-        Arrays.asList()
-      )
-      .onComplete(
-        context.asyncAssertSuccess(result -> {
-          assertThat(result.list(), is(empty()));
-          verifyNoInteractions(changeManagerClient);
-          verifyNoInteractions(queueItemDao);
-        })
-      );
+  void shouldReturnEmptyList_whenNoKeysToRegister(VertxTestContext testContext) {
+    service.registerSplitFileParts(
+      null, null,
+      new JobProfileInfo().withDataType(JobProfileInfo.DataType.MARC),
+      changeManagerClient, 0,
+      new ConnectionParams(Map.of(XOkapiHeaders.TENANT, TENANT_ID), null),
+      List.of()
+    ).onComplete(testContext.succeeding(result -> testContext.verify(() -> {
+      assertThat(result.list()).isEmpty();
+      verifyNoInteractions(changeManagerClient);
+      verifyNoInteractions(queueItemDao);
+      testContext.completeNow();
+    })));
   }
 
+  @DisplayName("should register single split file part successfully")
   @Test
-  public void testSingleSplitRegistration(TestContext context) {
-    WireMock.stubFor(
-      WireMock
-        .post("/change-manager/jobExecutions")
-        .willReturn(
-          WireMock
-            .created()
-            .withBody(
-              JsonObject
-                .mapFrom(
-                  new InitJobExecutionsRsDto()
-                    .withJobExecutions(
-                      Arrays.asList(
-                        new JobExecution().withId("test-execution-id")
-                      )
-                    )
-                )
-                .encode()
-            )
-        )
+  void shouldRegisterSingleSplitFilePart_successfully(VertxTestContext testContext) {
+    WIRE_MOCK.stubFor(
+      WireMock.post("/change-manager/jobExecutions")
+        .willReturn(WireMock.created().withBody(
+          JsonObject.mapFrom(new InitJobExecutionsRsDto()
+              .withJobExecutions(Collections.singletonList(new JobExecution().withId("test-execution-id"))))
+            .encode()))
     );
 
-    service
-      .registerSplitFileParts(
-        PARENT_UPLOAD_DEFINITION_WITH_USER,
-        PARENT_JOB_EXECUTION,
-        new JobProfileInfo().withDataType(JobProfileInfo.DataType.MARC),
-        changeManagerClient,
-        123,
-        new ConnectionParams(
-          Map.of(XOkapiHeaders.TENANT, TENANT_ID),
-          null
-        ),
-        Arrays.asList("key1")
-      )
-      .onComplete(
-        context.asyncAssertSuccess(result -> {
-          assertThat(result.succeeded(), is(true));
-          assertThat(result.list(), hasSize(1));
+    service.registerSplitFileParts(
+      PARENT_UPLOAD_DEFINITION_WITH_USER, PARENT_JOB_EXECUTION,
+      new JobProfileInfo().withDataType(JobProfileInfo.DataType.MARC),
+      changeManagerClient, 123,
+      new ConnectionParams(Map.of(XOkapiHeaders.TENANT, TENANT_ID), null),
+      List.of("key1")
+    ).onComplete(testContext.succeeding(result -> testContext.verify(() -> {
+      assertThat(result.succeeded()).isTrue();
+      assertThat(result.list()).hasSize(1);
 
-          JobExecution execution = (JobExecution) result.list().getFirst();
-          assertThat(execution.getId(), is("test-execution-id"));
+      JobExecution execution = (JobExecution) result.list().getFirst();
+      assertThat(execution.getId()).isEqualTo("test-execution-id");
 
-          WireMock.verify(
-            WireMock.exactly(1),
-            WireMock.anyRequestedFor(
-              WireMock.urlMatching("/change-manager/jobExecutions")
-            )
-          );
+      WIRE_MOCK.verify(WireMock.exactly(1),
+        WireMock.anyRequestedFor(WireMock.urlMatching("/change-manager/jobExecutions")));
+      verify(changeManagerClient, times(1)).postChangeManagerJobExecutions(any(), any());
+      verifyNoInteractions(queueItemDao);
 
-          verify(changeManagerClient, times(1))
-            .postChangeManagerJobExecutions(any(), any());
-
-          verifyNoInteractions(queueItemDao);
-        })
-      );
+      testContext.completeNow();
+    })));
   }
 
+  @DisplayName("should register multiple split file parts successfully")
   @Test
-  public void testMultipleSplitRegistration(TestContext context) {
-    WireMock.stubFor(
-      WireMock
-        .post("/change-manager/jobExecutions")
-        .willReturn(
-          WireMock
-            .created()
-            .withBody(
-              JsonObject
-                .mapFrom(
-                  new InitJobExecutionsRsDto()
-                    .withJobExecutions(
-                      Arrays.asList(
-                        new JobExecution().withId("test-execution-id")
-                      )
-                    )
-                )
-                .encode()
-            )
-        )
+  void shouldRegisterMultipleSplitFileParts_successfully(VertxTestContext testContext) {
+    WIRE_MOCK.stubFor(
+      WireMock.post("/change-manager/jobExecutions")
+        .willReturn(WireMock.created().withBody(
+          JsonObject.mapFrom(new InitJobExecutionsRsDto()
+              .withJobExecutions(Collections.singletonList(new JobExecution().withId("test-execution-id"))))
+            .encode()))
     );
 
-    service
-      .registerSplitFileParts(
-        PARENT_UPLOAD_DEFINITION,
-        PARENT_JOB_EXECUTION,
-        new JobProfileInfo().withDataType(JobProfileInfo.DataType.MARC),
-        changeManagerClient,
-        123,
-        new ConnectionParams(
-          Map.of(XOkapiHeaders.TENANT, TENANT_ID),
-          null
-        ),
-        Arrays.asList("key1", "key2", "key3")
-      )
-      .onComplete(
-        context.asyncAssertSuccess(result -> {
-          assertThat(result.succeeded(), is(true));
-          assertThat(result.list(), hasSize(3));
+    service.registerSplitFileParts(
+      PARENT_UPLOAD_DEFINITION, PARENT_JOB_EXECUTION,
+      new JobProfileInfo().withDataType(JobProfileInfo.DataType.MARC),
+      changeManagerClient, 123,
+      new ConnectionParams(Map.of(XOkapiHeaders.TENANT, TENANT_ID), null),
+      Arrays.asList("key1", "key2", "key3")
+    ).onComplete(testContext.succeeding(result -> testContext.verify(() -> {
+      assertThat(result.succeeded()).isTrue();
+      assertThat(result.list()).hasSize(3);
+      assertThat(result.list().stream().map(JobExecution.class::cast).map(JobExecution::getId).toList())
+        .containsExactlyInAnyOrder("test-execution-id", "test-execution-id", "test-execution-id");
 
-          assertThat(
-            result
-              .list()
-              .stream()
-              .map(JobExecution.class::cast)
-              .map(JobExecution::getId)
-              .toList(),
-            containsInAnyOrder(
-              "test-execution-id",
-              "test-execution-id",
-              "test-execution-id"
-            )
-          );
+      WIRE_MOCK.verify(WireMock.exactly(3),
+        WireMock.anyRequestedFor(WireMock.urlMatching("/change-manager/jobExecutions")));
+      verify(changeManagerClient, times(3)).postChangeManagerJobExecutions(any(), any());
+      verifyNoInteractions(queueItemDao);
 
-          WireMock.verify(
-            WireMock.exactly(3),
-            WireMock.anyRequestedFor(
-              WireMock.urlMatching("/change-manager/jobExecutions")
-            )
-          );
-
-          verify(changeManagerClient, times(3))
-            .postChangeManagerJobExecutions(any(), any());
-
-          verifyNoInteractions(queueItemDao);
-        })
-      );
+      testContext.completeNow();
+    })));
   }
 
+  @DisplayName("should fail registration when server returns error response")
   @Test
-  public void testBadResponse(TestContext context) {
-    WireMock.stubFor(
-      WireMock
-        .post("/change-manager/jobExecutions")
-        .willReturn(WireMock.serverError())
+  void shouldFailRegistration_whenServerReturnsError(VertxTestContext testContext) {
+    WIRE_MOCK.stubFor(
+      WireMock.post("/change-manager/jobExecutions").willReturn(WireMock.serverError())
     );
 
-    service
-      .registerSplitFileParts(
-        PARENT_UPLOAD_DEFINITION,
-        PARENT_JOB_EXECUTION,
-        new JobProfileInfo().withDataType(JobProfileInfo.DataType.MARC),
-        changeManagerClient,
-        123,
-        new ConnectionParams(
-          Map.of(XOkapiHeaders.TENANT, TENANT_ID),
-          null
-        ),
-        Arrays.asList("key1")
-      )
-      .onComplete(
-        context.asyncAssertFailure(result -> {
-          WireMock.verify(
-            WireMock.exactly(1),
-            WireMock.anyRequestedFor(
-              WireMock.urlMatching("/change-manager/jobExecutions")
-            )
-          );
-
-          verify(changeManagerClient, times(1))
-            .postChangeManagerJobExecutions(any(), any());
-
-          verifyNoInteractions(queueItemDao);
-        })
-      );
+    service.registerSplitFileParts(
+      PARENT_UPLOAD_DEFINITION, PARENT_JOB_EXECUTION,
+      new JobProfileInfo().withDataType(JobProfileInfo.DataType.MARC),
+      changeManagerClient, 123,
+      new ConnectionParams(Map.of(XOkapiHeaders.TENANT, TENANT_ID), null),
+      List.of("key1")
+    ).onComplete(testContext.failing(result -> testContext.verify(() -> {
+      WIRE_MOCK.verify(WireMock.exactly(1),
+        WireMock.anyRequestedFor(WireMock.urlMatching("/change-manager/jobExecutions")));
+      verify(changeManagerClient, times(1)).postChangeManagerJobExecutions(any(), any());
+      verifyNoInteractions(queueItemDao);
+      testContext.completeNow();
+    })));
   }
 
+  @DisplayName("should return source path as key from job execution")
   @Test
-  public void testGetKey(TestContext context) {
+  void shouldReturnSourcePathAsKey_fromJobExecution(VertxTestContext testContext) {
     when(uploadDefinitionService.getJobExecutionById(anyString(), any()))
-      .thenReturn(
-        Future.succeededFuture(new JobExecution().withSourcePath("key"))
-      );
+      .thenReturn(Future.succeededFuture(new JobExecution().withSourcePath("key")));
 
-    service
-      .getKey("id", null)
-      .onComplete(
-        context.asyncAssertSuccess(result -> {
-          assertThat(result, is("key"));
-
-          verify(uploadDefinitionService, times(1))
-            .getJobExecutionById("id", null);
-          verifyNoMoreInteractions(uploadDefinitionService);
-        })
-      );
+    service.getKey("id", null).onComplete(
+      testContext.succeeding(result -> testContext.verify(() -> {
+        assertThat(result).isEqualTo("key");
+        verify(uploadDefinitionService, times(1)).getJobExecutionById("id", null);
+        verifyNoMoreInteractions(uploadDefinitionService);
+        testContext.completeNow();
+      }))
+    );
   }
 }
